--- a/src/components/css/Content.module.css
+++ b/src/components/css/Content.module.css
@@ -40,6 +40,7 @@
   margin-left: 40px;
   display: flex;
   flex-direction: column;
+  margin-bottom: 10px;
 }
 
 .content_Img {
@@ -50,8 +51,9 @@
 }
 
 .content_Img:hover {
-  width: 100%;
-  height: 100%;
+  width: 200%;
+  height: 200%;
+  z-index: 1000;
 }
 
 .content_text {
@@ -64,8 +66,7 @@
 
 .btns {
   display: flex;
-  align-items: stretch;
-  justify-content: space-between;
+  margin-right: 5px;
   width: 100%;
 }
 
