--- a/src/components/css/Content.module.css
+++ b/src/components/css/Content.module.css
@@ -44,16 +44,10 @@
 }
 
 .content_Img {
-  width: 100px;
-  height: 100px;
+  width: 300px;
+  height: 200px;
   border-radius: 12px;
   margin-bottom: 20px;
-}
-
-.content_Img:hover {
-  width: 200%;
-  height: 200%;
-  z-index: 1000;
 }
 
 .content_text {
@@ -75,4 +69,15 @@
   border: none;
   background-color: transparent;
   cursor: pointer;
+}
+
+@media screen and (max-width: 420px) {
+  .content_container {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+  }
+  .container {
+    width: 200px;
+  }
 }
