--- a/src/components/css/Game.module.css
+++ b/src/components/css/Game.module.css
@@ -14,3 +14,9 @@
   font-family: 'Orbitron', sans-serif;
   font-weight: 700;
 }
+
+@media screen and (max-width: 420px) {
+  .slider {
+    width: 200px;
+  }
+}
